<?xml version="1.0" encoding="utf-8"?>
<!--30-5-19 : Change Graph to Position-->
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent"
        android:background="#FAFAFA">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            android:gravity="center"
            android:weightSum="100">
            <!--<com.jjoe64.graphview.GraphView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="0dp"-->
                <!--android:id="@+id/graph"-->
                <!--android:layout_weight="100"-->
                <!--tools:ignore="UnusedAttribute"/>-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main"
                    android:textAlignment="center"
                    android:textSize="12pt"
                    android:textStyle="bold"/>
                <Spinner
                    android:id="@+id/sensorData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="5dp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textColor="#666"
                            android:text="@string/etdata1"
                            android:id="@+id/tvData1"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_0_00"
                            android:textColor="#000"
                            android:textSize="18sp"
                            android:id="@+id/etData1"
                            tools:ignore="Autofill,LabelFor,TextFields"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="5dp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textColor="#666"
                            android:id="@+id/tvData2"
                            android:text="@string/etdata2"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_0_00"
                            android:textColor="#000"
                            android:textSize="18sp"
                            android:id="@+id/etData2"
                            tools:ignore="Autofill,LabelFor,TextFields"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="5dp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textColor="#666"
                            android:id="@+id/tvData3"
                            android:text="@string/etdata3"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_0_00"
                            android:textColor="#000"
                            android:textSize="18sp"
                            android:id="@+id/etData3"
                            tools:ignore="Autofill,LabelFor,TextFields"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/slength"
                            android:textColor="#444"
                            android:textSize="15sp"
                            android:layout_height="wrap_content"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#000"
                                android:textSize="18sp"
                                android:id="@+id/stride_length"
                                android:text="@string/_0"
                                android:paddingEnd="5dp"
                                tools:ignore="Autofill,LabelFor,RtlSymmetry,TextFields"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:text="@string/cm"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/heading"
                            android:textColor="#444"
                            android:textSize="15sp"
                            android:layout_height="wrap_content"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#000"
                                android:textSize="18sp"
                                android:id="@+id/tvHeading"
                                android:text="@string/_0"
                                android:paddingEnd="5dp"
                                tools:ignore="Autofill,LabelFor,RtlSymmetry,TextFields"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:text="@string/deg"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <CheckBox android:id="@+id/cbOnlineMode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#444"
                        android:text="@string/online_mode"
                        android:checked="true"
                        android:onClick="onCheckboxClicked"/>
                    <CheckBox android:id="@+id/cbFollower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#444"
                        android:text="@string/Follower"
                        android:checked="true"
                        android:onClick="onCheckboxClicked"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="15dp"
                    android:id="@+id/targetForm"
                    android:visibility="gone"
                    android:orientation="horizontal">
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#222"
                        android:textSize="17sp"
                        android:id="@+id/etTarget"
                        android:text="@string/_0"
                        tools:ignore="Autofill,LabelFor,TextFields"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/m"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20sp"
                        />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add"
                        android:id="@+id/btAdd"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    tools:ignore="ExtraText">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start"
                        android:id="@+id/btLog"
                        tools:ignore="ButtonStyle" />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/getInfo"
                        android:id="@+id/btGetInfo"
                        tools:ignore="ButtonStyle" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/publish_data"
                    android:textAlignment="center"
                    android:textSize="12pt"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/topic"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:id="@+id/etTopic"
                        android:hint="@string/pdr_leader_position"
                        tools:ignore="Autofill"
                        android:inputType="text" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/message"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:id="@+id/etMessage"
                        android:hint="@string/heading_sl"
                        tools:ignore="Autofill,TextFields" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    tools:ignore="ExtraText">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/publish"
                        android:id="@+id/btPublish"
                        tools:ignore="ButtonStyle" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emfarih"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>